# InteractionTrees

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CONVENTIONS.md  DEV.md  DMonadREADME.md  Dockerfile  Makefile  README.md  README_POPL_ARTIFACT.md  TODO.md  _CoqConfig  _CoqProject.dune  _CoqProject.extra  _CoqProject.itree  cleanup.sh  common.mk  coq-itree-extra.opam  coq-itree-extra.opam.template  coq-itree.opam  dmf_proof_pointers.txt  dune-project  fixup.sh  meta.yml  notes.md  opam  setup-dune.sh  setup.sh  update.sh
.circleci/: config.yml
.github/workflows/: build-with-make.yml  docker-action.yml
doc/: HOME.md  index.html.jingoo  pubs.jingoo  runall
doc/assets/: style.css
docs/: index.html
docs/4.0.0/: ITree.Basics.Basics.html  ITree.Basics.CategoryFunctor.html  ITree.Basics.CategoryKleisli.html  ITree.Basics.HeterogeneousRelations.html  ITree.Core.ITreeDefinition.html  ITree.Eq.Eq.html  ITree.Eq.Paco2.html  ITree.Eq.SimUpToTaus.html  ITree.Events.Map.html  ITree.Events.Writer.html  ITree.Events.html  ITree.ITreeFacts.html  ITree.Indexed.Relation.html  ITree.Indexed.Sum.html  ITree.Interp.Handler.html  ITree.Interp.Interp.html  ITree.Interp.Recursion.html  ITree.Interp.RecursionFacts.html  ITree.Interp.Traces.html  config.js  coqdocjs.css  indexpage.html
docs/5.0.0/: ITree.Axioms.html  ITree.Basics.Basics.html  ITree.Basics.Category.html  ITree.Basics.CategoryFacts.html  ITree.Basics.CategoryFunctor.html  ITree.Basics.CategoryKleisli.html  ITree.Basics.CategoryKleisliFacts.html  ITree.Basics.CategoryOps.html  ITree.Basics.CategoryRelations.html  ITree.Basics.CategorySub.html  ITree.Basics.CategoryTheory.html  ITree.Basics.Function.html  ITree.Basics.FunctionFacts.html  ITree.Basics.HeterogeneousRelations.html  ITree.Basics.Monad.html  ITree.Basics.Tacs.html  ITree.Core.ITreeDefinition.html  ITree.Core.ITreeMonad.html  ITree.Core.KTree.html  ITree.Core.KTreeFacts.html  ITree.Core.Subevent.html  ITree.Eq.EqAxiom.html  ITree.Eq.Eqit.html  ITree.Eq.EuttExtras.html  ITree.Eq.Paco2.html  ITree.Eq.Rutt.html  ITree.Eq.Shallow.html  ITree.Eq.SimUpToTaus.html  ITree.Eq.UpToTaus.html  ITree.Eq.html  ITree.Events.Concurrency.html  ITree.Events.Dependent.html  ITree.Events.Exception.html  ITree.Events.ExceptionFacts.html  ITree.Events.FailFacts.html  ITree.Events.Map.html  ITree.Events.MapDefault.html  ITree.Events.MapDefaultFacts.html  ITree.Events.Nondeterminism.html  ITree.Events.Reader.html  (+41 more)
docs/assets/: style.css
docs/master/: ITree.Basics.Basics.html  ITree.Basics.Category.html  ITree.Basics.CategoryFacts.html  ITree.Basics.CategoryKleisliFacts.html  ITree.Basics.CategoryOps.html  ITree.Basics.CategoryRelations.html  ITree.Basics.CategorySub.html  ITree.Basics.CategoryTheory.html  ITree.Basics.Function.html  ITree.Basics.FunctionFacts.html  ITree.Basics.HeterogeneousRelations.html  ITree.Basics.Monad.html  ITree.Basics.MonadProp.html  ITree.Basics.MonadState.html  ITree.Basics.Tacs.html  ITree.Core.ITreeDefinition.html  ITree.Core.ITreeMonad.html  ITree.Core.KTree.html  ITree.Core.KTreeFacts.html  ITree.Core.Subevent.html  ITree.Eq.Eq.html  ITree.Eq.EqAxiom.html  ITree.Eq.Shallow.html  ITree.Eq.html  (+39 more)
examples/: .#DenoteCCS.v  Asm.v  AsmCombinators.v  BinaryOrCCS.v  CBPV.v  CBPVeff.v  CCS.v  Den.v  DenoteCCS.v  Echo.v  EqCCS.v  ExtractThreadsExample.v  Factorial.v  Fin.v  ICFPPaper.v  IO.v  ITreePredicatesExample.v  Imp.v  Imp2Asm.v  Imp2AsmBis.v  Imp2AsmCorrectness.v  Introduction.v  IntroductionSolutions.v  LC.v  Makefile  MultiThreadedPrinting.v  Nimp.v  ReadmeExample.v  STLC.v  _CoqProject  _CoqProject.make  dune  echo_driver.ml  runthread.ml  stlc.v  sum.v
examples/CCS/: DenoteCCS.v  OpCCS.v
examples/ccs/: DenoteCCS.v  GuardedCCS.v  KTreeCCS.v  Makefile  WeakCCS.v  ccs.org
examples/extract-io/: IO.v  dune
examples/extract-threads/: ExtractThreadsExample.v  dune  runthread.expected  runthread.ml
experiments/: Machine.v  Makefile  MoreEffects.v  ProductEffects.v  README.md  Reasoning.v  SmallStepExperiment.v
extra/: IForest.v  dune
hoare_example/: #Makefile#  .Makefile.d  .nia.cache  CoqMakefile.conf  Imp.v  ImpHoare.v  ImpIO.v  Makefile  Makefile.conf  _CoqProject
lib/: .gitignore  README.md
secure_example/: CatTheory.v  KTreeFin.v  LabelledAsm.v  LabelledAsmCombinators.v  LabelledAsmHandler.v  LabelledImp.v  LabelledImp2Asm.v  LabelledImp2AsmCorrectness.v  LabelledImp2AsmNoninterferencePres.v  LabelledImpHandler.v  LabelledImpInline.v  LabelledImpInline2Asm.v  LabelledImpInline2AsmCorrectness.v  LabelledImpInline2AsmNoninterferencePres.v  LabelledImpInlineTypes.v  LabelledImpInlineTypesProgInsens.v  LabelledImpTypes.v  LabelledImpTypesProgInsens.v  Lattice.v  Makefile  Utils_tutorial.v  _CoqProject
src/: .gitignore  Makefile  _CoqConfig  _CoqProject
tests/: Makefile  _CoqProject  _CoqProject.make  extraction-test.sh
theories/: Alternatives.v  Axioms.v  Basics.v  Basics_Functions.v  CoAlgebra.v  Core.v  Effect.v  Effects.v  EnvEffect.v  Eq.v  Equivalence.v  Events.v  Fix.v  FixFacts.v  ITree.v  ITreeFacts.v  KTree.v  MFixITree.v  Machine.v  Morphisms.v  MorphismsFacts.v  MutFix.v  OpenSum.v  REffect.v  Simple.v  StdEffects.v  Trace.v  Translate.v  TranslateFacts.v  UpTo.v  dune  euttC.v  inversion.v  natCoind.v  paco2_respectful.v  paco2_upto.v
tutorial/: #_CoqProject#  .nia.cache  Asm.v  AsmCombinators.v  AsmCombinatorsCorrectness.v  AsmOptimization.v  CatTheory.v  Factorial.v  Fin.v  Imp.v  Imp2Asm.v  Imp2AsmCorrectness.v  Imp2AsmProof.v  ImpHoare.v  Imp_Equiv.v  Introduction.v  KTreeFin.v  Label.v  LabelFacts.v  Makefile  PrintAssumptions.v  README.md  SubKTree.v  SubKTreeFacts.v  Test.v  Utils_tutorial.v  _CoqProject  _CoqProject.make  dune
tutorial-exc/: Asm.v  AsmCombinators.v  Imp.v  Imp2Asm.v  Imp2AsmCorrectness.v
(+293 files in other folders)
